--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 This file contains Change history for Catalyst-ActionRole-BuildDBICResult
 
+0.02  01 December 2011
+    * Changed the way we accumulate errors to allow for multiple find
+      conditions that are all different data types
+    * Added a note that this approach may not be awesome
+
 0.01  25 August 2010
     * First release
