Import of JJNAPIORK/Catalyst-ActionRole-BuildDBICResult-0.03.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-ActionRole-BuildDBICResult
gitpan-cpan-version:      0.03
gitpan-cpan-path:         JJNAPIORK/Catalyst-ActionRole-BuildDBICResult-0.03.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 This file contains Change history for Catalyst-ActionRole-BuildDBICResult
 
+0.03  01 December 2011
+    * I forgot to checkin the note mentioned in the previous changes notes :(
+
 0.02  01 December 2011
     * Changed the way we accumulate errors to allow for multiple find
       conditions that are all different data types
